[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/outline_volume_mute_black_24dp.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VirtualJoystick" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = -200.0
margin_right = 0.0
margin_bottom = 0.0
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
rect_pivot_offset = Vector2( 1341, 636 )
custom_fonts/font = SubResource( 1 )
text = "Dodge the Cardenas"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 4 )
placeholder_text = "Enter your name"

[node name="SubmitScore" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -231.5
margin_top = 150.0
margin_right = 231.5
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "Submit Score"

[node name="Leaderboard" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = -90.0
margin_right = 218.0
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"

[node name="HighscoresList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -100.0
margin_right = 240.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 4 )
auto_height = true

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0
rect_scale = Vector2( 1.77006, 1.81349 )
icon = ExtResource( 7 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
